--- a/config.yml
+++ b/config.yml
@@ -183,7 +183,7 @@ params:
       category: Services
       link: https://amp.icka.eu
     - name: Komga
-      category: Services
+      category: Multimedia
       link: https://komga.icka.eu
     - name: Request
       category: Multimedia
