--- a/config.yml
+++ b/config.yml
@@ -170,7 +170,7 @@ params:
     - name: Navidrome
       category: Multimedia
       link: https://navidrome.icka.eu/
-    - name: ICKA
+    - name: Site
       cateogory: Web
       link: https://www.icka.eu
     - name: Forum
